# SiameseNetwork

./: .gitignore  CreateAncPostPictures.py  CreateImgDirectories.py  DataAugmentation.py  Plotting.py  README.md
SN-ConstrativeLoss/: ContrastiveLoss.py  DatasetForCL.py  SiameseNNModelCL.py  testModelCL.py  trainDifferHyper_CL.py  trainModelCL.py
SN-TripletLoss/: DatasetTriplet.py  SiameseNNModelTriplet.py  testModelTriplet.py  trainDiffHyper_Triplet.py  trainModelTriplet.py
SN-Vanilla/: DatasetVanilla.py  SiameseNetworkVanilla.py  testModelVanilla.py  trainModelVanilla.py
ai-services/: README.md  pyproject.toml
ai-services/ai_services/: __init__.py  config.py
ai-services/ai_services/embeddings/: __init__.py  base.py  clip_model.py  dummy_model.py  efficientnet_model.py  registry.py  siamese_model.py  vit_model.py
ai-services/ai_services/explainability/: __init__.py  attention_map.py  gradcam.py  overlay.py
ai-services/ai_services/liveness/: __init__.py  heuristics.py
ai-services/ai_services/preprocessing/: __init__.py  image_ops.py
ai-services/ai_services/reasoning/: __init__.py  base.py  engine.py  ollama_adapter.py  openai_compatible_adapter.py  prompting.py  schemas.py  template_engine.py
ai-services/ai_services/siamese/: __init__.py  dataset.py  losses.py  network.py  train.py
ai-services/ai_services/vector_store/: __init__.py  base.py  faiss_store.py
ai-services/tests/: test_attention_map.py  test_gradcam.py  test_liveness.py  test_losses.py  test_preprocessing.py  test_reasoning.py  test_registry.py  test_vector_store.py
backend/: README.md  (+3 more)
(+81 files in other folders)
